SET(MY_C_FLAGS)
SET(MY_CXX_FLAGS)
SET(MY_CXX_FLAGS_RELEASE)
SET(MY_EXE_LINKER_FLAGS)

ADD_DEFINITIONS(-DHAVE_CONFIG_H "\"-DPACKAGE_STRING=\\\"ldsi ${LDSI_VERSION}\\\"\"")
ADD_DEFINITIONS(-DNDEBUG)
#ADD_DEFINITIONS(-D_DEBUG)

IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(MY_CXX_FLAGS "${MY_CXX_FLAGS} -Wall -O3 -funroll-loops -fomit-frame-pointer -ffast-math -march=prescott")
#  SET(MY_CXX_FLAGS "${MY_CXX_FLAGS} -pipe -Wall -O2")
#  SET(MY_CXX_FLAGS "${MY_CXX_FLAGS} -pipe -Wall -O0 -g")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

IF(CMAKE_BUILD_TOOL MATCHES "(msdev|devenv|nmake|VCExpress)")
  # Use the highest warning level for visual studio.
  SET(CMAKE_CXX_WARNING_LEVEL 4)
  IF(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
    STRING(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
  ELSE(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
  ENDIF(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")

  SET(MY_CXX_FLAGS_RELEASE "${MY_CXX_FLAGS_RELEASE} /Ox")
ENDIF(CMAKE_BUILD_TOOL MATCHES "(msdev|devenv|nmake|VCExpress)")

IF(CMAKE_COMPILER_2005 OR MSVC90)
  ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE)
  ADD_DEFINITIONS(-D_SCL_SECURE_NO_DEPRECATE)
ENDIF(CMAKE_COMPILER_2005 OR MSVC90) 

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MY_C_FLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MY_CXX_FLAGS}")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${MY_CXX_FLAGS_RELEASE}")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${MY_EXE_LINKER_FLAGS}")

FIND_PACKAGE(Boost COMPONENTS program_options)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
  LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
ENDIF(Boost_FOUND)

FIND_PACKAGE(GSL)
IF(GSL_FOUND)
  INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIR})
  LINK_DIRECTORIES(${GSL_LINK_DIRECTORIES})
  SET(MY_EXE_LINKER_FLAGS "${MY_EXE_LINKER_FLAGS} ${GSL_EXE_LINKER_FLAGS}")
ENDIF(GSL_FOUND)

IF(UNIX)
	SET(CMAKE_REQUIRED_LIBRARIES m)
ENDIF(UNIX)
CHECK_FUNCTION_EXISTS(log1p HAVE_LOG1P)
IF(UNIX)
	SET(CMAKE_REQUIRED_LIBRARIES)
ENDIF(UNIX)

CHECK_FUNCTION_EXISTS(getpid HAVE_GETPID)
CHECK_FUNCTION_EXISTS(_getpid HAVE__GETPID)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)

ADD_EXECUTABLE(ldsi app.cpp pop.cpp)

TARGET_LINK_LIBRARIES(ldsi ${Boost_LIBRARIES} ${GSL_LIBRARIES})

INSTALL(TARGETS ldsi RUNTIME DESTINATION bin)

INCLUDE(InstallRequiredSystemLibraries)
 
